<resources>
    <!-- Banco de Dados do Firebase-->
    <string name="db_usuarios">usuarios</string>
    <string name="db_promocoes">promocoes</string>
    <string name="db_categorias">categorias</string>

<!-- Nó Usuario -->
    <string name="campo_user_ativo">ativo</string>
    <string name="campo_user_datacadastro">dataCadastro</string>
    <string name="campo_user_email">email</string>
    <string name="campo_user_tipo_perfil">tipoPerfil</string>

 <!-- Nó Promoções -->
    <string name="campo_promo_categorias">categorias</string>
    <string name="campo_promo_data_cadastro">dataCadastro</string>
    <string name="campo_promo_id">id</string>
    <string name="campo_promo_image_path">image_path</string>
    <string name="campo_promo_likes">likes</string>
    <string name="campo_promo_nome">nome</string>
    <string name="campo_promo_preco">preco</string>
    <string name="campo_promo_qtdCurtidas">qtdCurtidas</string>
    <string name="campo_promo_status">status</string>
    <string name="campo_promo_url">url</string>



 <!-- Nó Categorias -->
    <string name="campo_categoria_nome_categoria">nomeCategoria</string>

    <!-- Configuração do aplicativo -->
    <string name="app_name">EasyPromo</string>

    <!-- Textos de views -->
    <string name="texto_adicionar_oferta">Ao sugerir uma nova oferta no EasyPromo uma equipe de administração de conteúdo irá verificar e avaliar se a loja é confiável e se o valor está abaixo do mercado. Sua oferta será aprovada após a confirmação destes itens e estará visível para todos os usuários do aplicativo.</string>

    <!-- Textos do spinner das categorias -->
    <string name="texto_spinner_categorias">Selecione uma categoria...</string>

    <!-- Textos de views -->
    <string name="texto_btEntrar">Entrar</string>
    <string name="texto_txtCadastrar">Cadastre-se!</string>
    <string name="texto_btRegistrar">Cadastrar</string>

    <!-- Textos de toolbars -->
    <string name="texto_toolbar">EasyPromo</string>
    <string name="texto_toolbar_admin">EasyPromo</string>

    <!-- Textos de fragments -->
    <string name="fragment_admin_promocao">PROMOÇÕES</string>
    <string name="fragment_admin_usuario">USUÁRIOS</string>

    <!-- Hints de EditTexts -->
    <string name="hint_etEmail">Digite seu email...</string>
    <string name="hint_etSenha">Digite sua senha...</string>
    <string name="hint_etNome">Digite seu nome...</string>
    <string name="hint_etConfirmaSenha">Confirme sua senha...</string>

    <!-- Erros genéricos -->
    <string name="errorFillAllFields">Preencha todos os campos</string>

    <!-- Erros de usuário -->
    <string name="userError_WrongConfirmPass">Senha de confirmação inválida</string>

    <!-- Exceções de usuário -->
    <string name="userException_WeakPassword">Digite uma senha mais forte, contendo mais que 6 caracteres</string>
    <string name="userException_InvalidCredentials">O e-mail informado é inválido</string>
    <string name="userException_UserCollision">E-mail em uso por um usuário</string>
    <string name="userException_Default">Erro ao cadastrar usuário. Tente novamente</string>

    <!-- Exceções de login -->
    <string name="loginException_InvalidUser">E-mail informado não é cadastrado</string>
    <string name="loginException_InvalidCredentials">Senha informada está errada</string>
    <string name="loginException_Default">Erro ao efetuar login. Tente novamente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
